--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,41 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/e5711a1071.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-    <% if user_signed_in? %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Bookers</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+              <li><%= link_to "Home", root_path %></li>
+              <li><%= link_to "Users"  %></li>
+              <li><%= link_to "Books"  %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+              <% else %>
+              <li><%= link_to "Home", root_path %></li>
+              <li><%= link_to "About"  %></li>
+              <li><%= link_to "Sign up"  %></li>
+              <li><%= link_to "Log in"  %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <% if user_signed_in? %>
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
@@ -24,7 +52,10 @@
         <%= link_to "ログイン", new_user_session_path %>
       </li>
     <% end %>
-  </header>
+  </main>
+  <footer>
+    <div class="container mt-5"></div>
+  </footer>  
     <%= yield %>
   </body>
 </html>
