--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,18 @@
-<h1>aboutページです</h1>
+<body>
+  <div class="container">
+    <div class="row">
+      <h1 class="px-3 mx-auto">
+        Welcome to<i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong>!
+      </h1>
+    </div>
+  </div>
+</body>
+<footer>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="mx-auto">
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </div>
+  </div>
+</footer>
