--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,9 @@
-<h1>topページです</h1>
+<footer>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="mx-auto">
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </div>
+  </div>
+</footer>
