[Add]aboutページや、topページの完成

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,8 +30,8 @@
         </div>
 
         <div class="actions">
-          <input type="submit" name="commit" value="sign up" class="btn btn-sm btn-success"
-          data-disable-with="sign up">
+          <input type="submit" name="commit" value="Sign up" class="btn btn-sm btn-success"
+          data-disable-with="ign up">
         </div>
       <% end %>
       <a href="/users/sign_in">Log in</a>
