--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -2,8 +2,8 @@
 <body>
   <div class="container">
     <div class="row">
-      <h1 class="px-3 mx-auto">
-        Welcome to<i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong>!
+      <h1 class="px-3 mx-auto mt-3">
+        Welcome to <i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong>!
       </h1>
     </div>
   </div>
