--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
 <body>
-  <main>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/"><span>Bookers</span></a>
@@ -23,9 +23,9 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Home" %></li>
             <li><%= link_to "Users"  %></li>
-            <li><%= link_to "Books"  %></li>
+            <li><%= link_to "Books", books_path %></li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
             <% else %>
             <li><%= link_to "Home", root_path %></li>
@@ -37,7 +37,8 @@
         </div>
       </div>
     </nav>
-  </main>
+  </header>
+
 <%= yield %>
 </body>
 </html>
