--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,12 @@
 <main>
   <div class="container px-5 px-sm-0">
     <div class="row">
-
       <div class="col-md-3">
         <h2>User info</h2>
         <img src="app/assets/images/no_image.jpg">
         <table class="table">
           <tbody>
+            
             <tr>
               <th>name</th>
               <th></th>
@@ -15,19 +15,14 @@
               <th>introduction</th>
               <th></th>
             </tr>
+            
           </tbody>
         </table>
         <div class="row">
           <a class="btn btn-outlien-secondary btn-block " href=""><i class="fa-solid fa-user-gear"></i></a>
         </div>
         <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, url: '/books', method: :post do |f| %>
-          <p>Title</p>
-          <%= f.text_field :title %>
-          <p>Opinion</p>
-          <%= f.text_field :body %>
-          <%= f.submit 'Create Book' %>
-        <% end %>
+        <%= render 'list', books: @books %>
       </div>
 
       <div class="col-md-8 offset-md-1">
