--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,14 +20,8 @@
         <div class="row">
           <a class="btn btn-outlien-secondary btn-block " href=""><i class="fa-solid fa-user-gear"></i></a>
         <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, url: '/books', method: :post do |f| %>
-          <p>Title</p>
-          <%= f.text_field :title %>
-          <p>Opinion</p>
-          <%= f.text_field :body %>
-          <%= f.submit 'Create Book'%>
-        <% end %>
-        </div>
+        <%= render 'books/list', books: @books %>
+      </div>
       </div>
     </div>
   </div>
