--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,31 @@
 <main>
   <div class="container px-5 px-sm-0">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 mt-3">
         <h2>User info</h2>
-        <img src="app/assets/images/no_image.jpg">
+        <%= image_tag @user.get_profile_image(100,100) %>
         <table class="table">
           <tbody>
-            
             <tr>
               <th>name</th>
-              <th></th>
+              <th><%= @user.name %></th>
             </tr>
             <tr>
               <th>introduction</th>
-              <th></th>
+              <th><%= @user.introduction %></th>
             </tr>
-            
           </tbody>
         </table>
         <div class="row">
-          <a class="btn btn-outlien-secondary btn-block " href=""><i class="fa-solid fa-user-gear"></i></a>
+          <%= link_to edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
         </div>
         <h2 class="mt-3">New book</h2>
-        <%= render 'list', books: @books %>
+        <%= render 'list', book: @book %>
       </div>
 
-      <div class="col-md-8 offset-md-1">
+      <div class="col-md-8 mt-3 offset-md-1">
         <h2>Books</h2>
         <table class="table table-hover table-inveres">
           <thead>
@@ -39,9 +39,13 @@
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><!--ここには投稿者の写真が入る--></td>
-                <td><%= book.title %></td>
-                <td><%= book.body %></td>
+                <td><%= @user.profile_image %></td>
+                <td>
+                  <%= link_to user_path(current_user.id) do %>
+                    <%= @book.title %>
+                  <% end %>
+                </td>
+                <td><%= @book.body %></td>
               </tr>
             <% end %>
           </tbody>
