--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,28 @@
 <main>
   <div class="container px-5 px-sm-0">
     <div class="row">
-
-      <div class="col-md-3">
+      <div class="col-md-3 mt-3">
         <h2>User info</h2>
-        <img src="app/assets/images/no_image.jpg">
+        <%= image_tag @user.get_profile_image(100,100) %>
         <table class="table">
           <tbody>
             <tr>
               <th>name</th>
-              <th></th>
+              <th><%= @user.name %></th>
             </tr>
             <tr>
               <th>introduction</th>
-              <th></th>
+              <th><%= @user.introduction %></th>
             </tr>
           </tbody>
         </table>
         <div class="row">
-          <a class="btn btn-outlien-secondary btn-block " href=""><i class="fa-solid fa-user-gear"></i></a>
+          <%= link_to  edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" %>
+            <i class="fa-solid fa-user-gear"></i>
+          <% end %>
+        </div>
         <h2 class="mt-3">New book</h2>
-        <%= render 'books/list', books: @books %>
-      </div>
+        <%= render 'list', book: @book %>
       </div>
     </div>
   </div>
