[Add]header部分の文字の色の修正、iconの追加

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -39,7 +39,7 @@
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><%= @user.profile_image %></td>
+                <td><%= image_tag @user.get_profile_image(100,100) %></td>
                 <td>
                   <%= link_to user_path(current_user.id) do %>
                     <%= @book.title %>
