--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,23 +28,23 @@
         <h2>Book detail</h2>
         <table class="table table-hover table-inveres">
           <tbody>
-            <tr>
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-            </tr>
+            <% @books.each do |book| %>
+              <tr>
+                <!--以下のpathを要修正　作った人のpsthやインスタンス変数の定義をすること　（未完了）-->
+                <td>
+                  <%= link_to user_path(user.id) do %>
+                    <%= image_tag @user.get_profile_image(100,100) %>
+                    <%= #作った人のnameの取得と同時にリンクを作成 %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to user_path(user.id) do %>
+                    <%= @book.title %>
+                  <% end %>
+                </td>
+                <td><%= @book.body %></td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
