--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
           <% end %>
         </div>
         <h2 class="mt-3">New book</h2>
-        <%= render 'list', book: @book %>
+        <%= render 'books/list', book: @book %>
       </div>
     </div>
   </div>
