--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,27 +24,28 @@
         <h2 class="mt-3">New book</h2>
         <%= render 'list', book: @book %>
       </div>
-      <div class="col-md-8 mt-5 offset-md-1">
+      <div class="col-md-8 mt-3 offset-md-1">
         <h2>Book detail</h2>
         <table class="table table-hover table-inveres">
           <tbody>
-            <% @books.each do |book| %>
               <tr>
-                <!--以下のpathを要修正　作った人のpsthやインスタンス変数の定義をすること　（未完了）-->
                 <td>
-                  <%= link_to user_path(user.id) do %>
-                    <%= image_tag @user.get_profile_image(100,100) %>
-                    <%= #作った人のnameの取得と同時にリンクを作成 %>
-                  <% end %>
+                  <%= image_tag @user.get_profile_image(100,100) %>
                 </td>
                 <td>
-                  <%= link_to user_path(user.id) do %>
-                    <%= @book.title %>
-                  <% end %>
+                  <%= @book.title %>
                 </td>
-                <td><%= @book.body %></td>
+                <td>
+                  <%= @book.body %>
+                </td>
+                <td>
+                  <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
+                </td>
+                <td>
+                  <%= link_to "Destroy", book_path(@book.id), method: :delete, 
+                    "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger" %>
+                </td>
               </tr>
-            <% end %>
           </tbody>
         </table>
       </div>
