--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,12 +17,45 @@
           </tbody>
         </table>
         <div class="row">
-          <%= link_to  edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" %>
-            <i class="fa-solid fa-user-gear"></i>
+          <%= link_to  edit_user_path(@user), class:"btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
           <% end %>
         </div>
         <h2 class="mt-3">New book</h2>
         <%= render 'books/list', book: @book %>
+      </div>
+
+      <div class="col-md-8 mt-3 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inveres">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td>
+                  <%= link_to user_path(@user) do%>
+                    <%= image_tag @user.get_profile_image(100,100) %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= book.body %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
