--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-3 mt-3">
         <h2>User info</h2>
         <%= image_tag @user.get_profile_image(100,100) %>
-        <table class="table">
+        <table class="table mb-5">
           <tbody>
             <tr>
               <th>name</th>
