--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-3 mt-3">
         <h2>User info</h2>
         <%= image_tag @user.get_profile_image(100,100) %>
-        <table class="table">
+        <table class="table mb-5">
           <tbody>
             <tr>
               <th>name</th>
@@ -30,7 +30,13 @@
           <tbody>
               <tr>
                 <td>
-                  <%= image_tag @user.get_profile_image(100,100) %>
+                  <%= link_to user_path(current_user) do %>
+                    <%= image_tag @user.get_profile_image(100,100) %>
+                  <% end %>
+                  </br>
+                  <%= link_to user_path(current_user) do %>
+                    <%= @user.name%>
+                  <% end %>
                 </td>
                 <td>
                   <%= @book.title %>
@@ -42,7 +48,7 @@
                   <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
                 </td>
                 <td>
-                  <%= link_to "Destroy", book_path(@book.id), method: :delete, 
+                  <%= link_to "Destroy", book_path(@book.id), method: :delete,
                     "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger" %>
                 </td>
               </tr>
