--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,38 @@
         <h2 class="mt-3">New book</h2>
         <%= render 'books/list', book: @book %>
       </div>
+      <div class="col-md-8 offset-md-1 mt-3">
+        <h2>Users</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>image</th>
+              <th>name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @users.each do |user|%>
+              <tr>
+                <td>
+                  <!--以下の部分は投稿したユーザーのprofile画像を表示-->
+                  <%= %>
+                </td>
+                <td>
+                  <!--以下の部分は投稿したユーザーのnameを表示-->
+                  <%= %>
+                </td>
+                <td>
+                  <!--以下の部分は投稿したユーザーのshowページへのリンク表示-->
+                  <%= link_to do %>
+                    <%= %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </main>
