[Add]Usersのその他ユーザーの情報取得部分作成完了

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -39,17 +39,17 @@
               <tr>
                 <td>
                   <!--以下の部分は投稿したユーザーのprofile画像を表示-->
-                  <%= %>
+                  <%= link_to do %>
+                    <%= image_tag user.get_profile_image(100,100) %>
+                  <% end %>
                 </td>
                 <td>
                   <!--以下の部分は投稿したユーザーのnameを表示-->
-                  <%= %>
+                  <%= user.name %>
                 </td>
                 <td>
                   <!--以下の部分は投稿したユーザーのshowページへのリンク表示-->
-                  <%= link_to do %>
-                    <%= %>
-                  <% end %>
+                  <%= link_to "Show", user_path(user) %>
                 </td>
               </tr>
             <% end %>
