--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,15 +4,14 @@
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mt-3  mx-auto">
           <h1>User info</h1>
-          <!--form_withも要修正-->
-          <%= form_with model: @book, url: '/books', method: :post do |f| %>
+          <%= form_with model: @user, url: "<!--この部分の修正！-->",  method: :post do |f| %>
             <div class="form-group">
               <p>Name</p>
               <%= f.text_field :name, class:"form-control book_title mb-3" %>
             </div>
             <div class="form-group">
               <p>Image</p>
-            <!--profile画像の選択画面-->
+              <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
             </div>
             <div class="form-group">
               <p>Introduction</p>
