[Add]user編集ページ完成

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -2,6 +2,6 @@
   <p>Title</p>
   <%= f.text_field :title, class:"form-control book_title" %>
   <p>Opinion</p>
-  <%= f.text_field :body, class:"form-control book_body" %>
+  <%= f.text_area :body, class:"form-control book_body" %>
   <%= f.submit 'Create Book', class:"btn btn-success  mt-3" %>
 <% end %>
