--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mt-3  mx-auto">
           <h1>Editing Book</h1>
-          <%= form_with model: @book, url: '/books', method: :post do |f| %>
+          <%= form_with model: @book, url: '/books', method: :p do |f| %>
             <div class="form-group">
               <p>Title</p>
               <%= f.text_field :title, class:"form-control book_title mb-3" %>
