--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,5 @@
 <main>
+  <p><%= flash[:notice] %></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3 mt-3">
