--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,5 @@
 <main>
+  <p><%= flash[:notice] %>
   <div class="container">
     <div class="row">
       <div class="mx-auto mt-3 col-11 col-sm-10 col-lg-8 col-xl-6">
