--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,11 +3,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mt-3  mx-auto">
-          <h1>User info</h1>
-          <%= form_with model: @user, url: "<!--この部分の修正！-->",  method: :post do |f| %>
+          <h2>User info</h2>
+          <%= form_with model: @user do |f| %>
             <div class="form-group">
               <p>Name</p>
-              <%= f.text_field :name, class:"form-control book_title mb-3" %>
+              <%= f.text_field :name, class:"form-control user_name" %>
             </div>
             <div class="form-group">
               <p>Image</p>
@@ -15,10 +15,10 @@
             </div>
             <div class="form-group">
               <p>Introduction</p>
-              <%= f.text_field :body, class:"form-control book_body" %>
+              <%= f.text_area :introduction, class:"form-control user_body" %>
             </div>
             <div class="form-group">
-              <%= f.submit 'Update Book', class:"btn btn-secondary" %>
+              <%= f.submit 'Update User', class:"btn btn-secondary" %>
             </div>
           <% end %>
         </div>
