--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,14 +4,22 @@
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mt-3  mx-auto">
           <h1>Editing Book</h1>
-          <%= form_with model: @book, url: '/books', method: :p do |f| %>
+          <% if @book.errors.any? %>
+            <%= @book.errors.count %>件のエラーが発生しました
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+          <%= form_with model: @book do |f| %>
             <div class="form-group">
               <p>Title</p>
               <%= f.text_field :title, class:"form-control book_title mb-3" %>
             </div>
             <div class="form-group">
               <p>Opinion</p>
-              <%= f.text_field :body, class:"form-control book_body" %>
+              <%= f.text_area :body, class:"form-control book_body" %>
             </div>
             <div class="form-group">
               <%= f.submit 'Update Book', class:"btn btn-success" %>
