--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,13 +45,15 @@
                 <td>
                   <%= @book.body %>
                 </td>
-                <td>
-                  <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
-                </td>
-                <td>
-                  <%= link_to "Destroy", book_path(@book.id), method: :delete,
-                    "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger" %>
-                </td>
+                <% if @book.user == current_user %>
+                  <td>
+                    <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
+                  </td>
+                  <td>
+                    <%= link_to "Destroy", book_path(@book.id), method: :delete,
+                      "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger" %>
+                  </td>
+                <% end %>
               </tr>
           </tbody>
         </table>
