[Add]アクセス制限の実装、バリデーション設定の実装

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,7 +40,9 @@
                   <% end %>
                 </td>
                 <td>
+                <%= link_to book_path(@book.id) do %>
                   <%= @book.title %>
+                <% end %>
                 </td>
                 <td>
                   <%= @book.body %>
