--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,16 @@
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3 mt-3">
-          
+        <div class="error">
+          <% if @book.errors.any? %>
+            <%= @book.errors.count %>件のエラーが発生しました
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        </div>
         <h2>User info</h2>
         <%= image_tag @user.get_profile_image(100,100) %>
         <table class="table mb-5">
