--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mt-3  mx-auto">
           <h1>Editing Book</h1>
           <% if @book.errors.any? %>
-            <%= @book.errors.count %>件のエラーが発生しました
+            <%= @book.errors.count %>件のerrorが発生しました
             <ul>
               <% @book.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
