--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-3 mt-3">
         <div class="error">
           <% if @book.errors.any? %>
-            <%= @book.errors.count %>件のエラーが発生しました
+            <%= @book.errors.count %>件のerrorが発生しました
             <ul>
               <% @book.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
@@ -13,7 +13,7 @@
           <% end %>
         </div>
         <h2>User info</h2>
-        <%= image_tag @user.get_profile_image(100,100) %>
+        <%= image_tag @user.get_profile_image(80,80) %>
         <table class="table mb-5">
           <tbody>
             <tr>
