--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,12 +18,12 @@
           </tbody>
         </table>
         <div class="row">
-          <%= link_to edit_user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
+          <%= link_to edit_user_path(@user), class:"btn btn-outline-secondary btn-block" do %>
             <i class="fas fa-user-cog"></i>
           <% end %>
         </div>
         <h2 class="mt-3">New book</h2>
-        <%= render 'list', book: @book %>
+        <%= render 'list', book: @new_book %>
       </div>
       <div class="col-md-8 mt-3 offset-md-1">
         <h2>Book detail</h2>
@@ -31,11 +31,11 @@
           <tbody>
               <tr>
                 <td>
-                  <%= link_to user_path(current_user) do %>
-                    <%= image_tag @user.get_profile_image(100,100) %>
+                  <%= link_to user_path(@user.id) do %>
+                    <%= image_tag @user.get_profile_image(80,80) %>
                   <% end %>
                   </br>
-                  <%= link_to user_path(current_user) do %>
+                  <%= link_to user_path(@user.id) do %>
                     <%= @user.name%>
                   <% end %>
                 </td>
