--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <p><%= flash[:notice] %></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
-      <div class="col-md-3 mt-3">
+      <div class="col-md-3 ">
         <h2>User info</h2>
         <%= image_tag @user.get_profile_image(100,100) %>
         <table class="table mb-5">
@@ -26,7 +26,7 @@
         <%= render 'books/list', book: @book %>
       </div>
 
-      <div class="col-md-8 mt-3 offset-md-1">
+      <div class="col-md-8  offset-md-1">
         <h2>Books</h2>
         <table class="table table-hover table-inveres">
           <thead>
@@ -42,7 +42,7 @@
               <tr>
                 <td>
                   <%= link_to user_path(@user) do%>
-                    <%= image_tag @user.get_profile_image(100,100) %>
+                    <%= image_tag @user.get_profile_image(80,80) %>
                   <% end %>
                 </td>
                 <td>
